# GMaps_nearby_activities

./: .gitignore  Huisjes.xlsx  README.md  Script.ipynb  Script_schoon.ipynb  pyproject.toml  search_terms.txt
data/processed/: Houses.xlsx  Huisjes.xlsx
data/raw/: Houses.xlsx  Huisjes.xlsx
processed_data/: Huisjes.xlsx
src/: main.py  processing.py  settings.py
