[tool.poetry]
name = "gmaps"
version = "0.1.0"
description = ""
authors = ["CodingJelle <jellevbarneveld@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
googlemaps = "^4.10.0"
simplejson = "^3.19.2"
openpyxl = "^3.1.2"
loguru = "^0.7.2"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
